Finalizando os Testes referentes a Session